# schlang

./: Cargo.toml  README.md
.github/: FUNDING.yml
compiler/sch/: Cargo.toml  README.md
compiler/sch/src/: main.rs
compiler/sch_ast/: Cargo.toml
compiler/sch_driver/: Cargo.toml
compiler/sch_driver/src/: interface.rs  lib.rs
compiler/sch_interface/: Cargo.toml
compiler/sch_interface/src/: interface.rs
compiler/sch_lexer/: Cargo.toml
compiler/sch_lexer/src/: lib.rs
compiler/sch_parser/: Cargo.toml
compiler/sch_symbol_table/: Cargo.toml
compiler/sch_symbol_table/src/: lib.rs
src/: error_handler.rs  grammar.toml  lexical_analysis.rs  lexical_analyzer.rs  lexicon.rs  main.rs  preprocessor.rs  symbol_table_manager.rs  syntax.toml
