[package]
name = "sch_driver"
version = "0.0.0"
authors = ["Fredrik Stave <fredrik.stave@schibsted.com>"]
edition = "2018"

#
# [lib]
# crate-type = ["dylib"]
#

[dependencies]
clap = "3.0.0-beta.2"
libc = "0.2"
tracing = "0.1"
sch_ast = { path = "../sch_ast" }
sch_lexer = { path = "../sch_lexer" }
sch_interface = { path = "../sch_interface" }
sch_symbol_table = { path = "../sch_symbol_table" }
